--- a/starter-code/styles/main.css
+++ b/starter-code/styles/main.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('../assets/grass.jpeg');
 }
 
 div.grid {
@@ -20,12 +21,13 @@ div.grid {
   height: 600px;
   display: flex;
   flex-wrap: wrap;
+  background-color: rgba(99,201,0,0.4);
 }
 
 div.grid-item {
   width: 40px;
   height: 40px;
-  border: 1px dashed black;
+  border: 1px dashed rgb(86,176,0);
 }
 
 div.grid-item.player {
@@ -34,7 +36,8 @@ div.grid-item.player {
 }
 
 div.grid-item.food {
-  background-color: rgb(31, 240, 3);
+  background-color: rgba(23,137,255,1);
+  background-image: url('../assets/bug.png');
   background-size: contain;
 }
 
@@ -46,12 +49,21 @@ div.header {
 .game-title {
   text-transform: uppercase;
   color: black;
+  text-shadow: 1px 1px 2px grey, 0 0 1em white, 0 0 0.2em white;
+}
+
+.instruct {
+  width: 300px;
+  text-align: center;
+  text-shadow: 1px 1px 2px grey, 0 0 1em white, 0 0 0.2em white;
 }
 
 .points {
   margin: 20px;
   font-size: 30px;
   font-weight: 600;
+  text-align: center;
+  text-shadow: 1px 1px 2px grey, 0 0 1em white, 0 0 0.2em white;
 }
 
 button {
@@ -73,7 +85,15 @@ button:hover {
 body > div.grid > div > p {
   text-transform: uppercase;
   color: orangered;
+  text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em grey;
   font-size: 50px;
   text-align: center;
   margin-top: 210px;
+  padding: 5px;
+}
+
+.face {
+  background-image: url('../assets/eyes.jpg');
+  background-color: orangered;
+  rotate: -90deg;
 }
