added multiple bugs with different values. using new snakeEats and newFood functions. commented out old functions so the ability to revert back to 1bug mode is possible

--- a/starter-code/styles/main.css
+++ b/starter-code/styles/main.css
@@ -37,7 +37,7 @@ div.grid-item.player {
 
 div.grid-item.food {
   background-color: rgba(23,137,255,1);
-  background-image: url('../assets/bug.png');
+  background-image: url('../assets/bug1.png');
   background-size: contain;
 }
 
