increased grid visibility

--- a/starter-code/styles/main.css
+++ b/starter-code/styles/main.css
@@ -27,7 +27,7 @@ div.grid {
 div.grid-item {
   width: 40px;
   height: 40px;
-  border: 1px dashed rgb(86,176,0);
+  border: 1px dashed black;
 }
 
 div.grid-item.player {
